# 6-grading-system

./: .gitmodules  CMakeLists.txt  README.md
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: grading.yml
